fix: (CSS) IE8 主题 overflow 按钮大小异常

--- a/UserThemes/IE8/icons.css
+++ b/UserThemes/IE8/icons.css
@@ -15,8 +15,8 @@
 }
 
 toolbar .toolbarbutton-1 {
-    --toolbarbutton-outer-padding: 0;
-    --toolbarbutton-inner-padding: 4px;
+    --toolbarbutton-outer-padding: 0 !important;
+    --toolbarbutton-inner-padding: 4px !important;
 }
 
 toolbar .toolbaritem-combined-buttons {
@@ -44,7 +44,13 @@ toolbar .toolbarbutton-1[type="menu-button"] toolbarbutton[disabled] .toolbarbut
 }
 
 #nav-bar :not(.toolbaritem-combined-buttons)>.chromeclass-toolbar-additional:not(#downloads-button) {
+    --toolbarbutton-outer-padding: 0 !important;
     --toolbarbutton-inner-padding: 4.8px;
+}
+
+#nav-bar #nav-bar-overflow-button>.toolbarbutton-icon {
+    width: calc(2 * var(--toolbarbutton-inner-padding) + 16px + 1.8px);
+    height: calc(2 * var(--toolbarbutton-inner-padding) + 16px + 1.8px);
 }
 
 #nav-bar #downloads-button .toolbarbutton-badge-stack,
